# quoridor-game

./: CMakeLists.txt  EmptyMap.c  all functions.c  allFunctions.c  exit function.c  newfile  printMap.c  quridorFunction.c  quridorMain.c  section1.c  section2.c  section3&4.c  section3.c
Phase1/: EmptyMap.c  printMap.c  section1.c
Phase2/: allFunctions.c  section2.c
game/: filenames  rezasave
phaze 3&4/: section3&4.c
